--- a/Website/CSS/styles.css
+++ b/Website/CSS/styles.css
@@ -36,6 +36,14 @@
 	box-shadow: 10px 10px 5px grey;
 }
 
+.test-capture {
+	background-color: white;
+	margin:50px;
+	padding:50px;
+	border-radius: 20px;
+	box-shadow: 10px 10px 5px grey;
+}
+
 
 .footer{
 	color: black;
