--- a/CSS/landingPage.css
+++ b/CSS/landingPage.css
@@ -1,7 +1,7 @@
 body, html {
     margin: 0;
     height: 100%;
-    background: url('../css/img/balloonsBG.jpg') no-repeat center center fixed;
+    background: url('lloonsBG.jpg') no-repeat center center fixed;
     background-size: cover;
     background-size: cover;
     background-size: cover;
